Bug 40780 - SLIDESHOW with custom animations: sound is lost with Linux
Summary: SLIDESHOW with custom animations: sound is lost with Linux
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
: 44115 48238 92489 104678 (view as bug list)
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2011-09-11 05:13 UTC by Joshua O'Leary
Modified: 2019-03-04 13:05 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
Demo file - custom animation with sound (12.88 KB, application/vnd.oasis.opendocument.presentation)
2011-09-11 05:13 UTC, Joshua O'Leary
Details
Demo file working by selecting a new sound and saving in 4.4 (12.97 KB, application/vnd.oasis.opendocument.presentation)
2014-10-01 06:08 UTC, Luke
Details
Screenshot of version still with bug (175.82 KB, image/png)
2014-10-07 15:47 UTC, Joshua O'Leary
Details
GStreamer log message ( turn on with export GST_DEBUG=7 ). (39.13 KB, application/zip)
2019-02-12 14:13 UTC, Mark Hung
Details
no sound (752.25 KB, video/mp4)
2019-03-04 09:08 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua O'Leary 2011-09-11 05:13:56 UTC
Created attachment 51048 [details]
Demo file - custom animation with sound

As in attachment, sound fails to play if added to an object in custom animation. Sounds do work on slide transition however. This bug has been around for a long time, from older versions to the very latest Libreoffice.
Comment 1 Björn Michaelsen 2011-12-23 12:33:57 UTC Comment hidden (obsolete)
Comment 2 Joshua O'Leary 2012-01-15 05:35:21 UTC
The bug still persists in 3.5.0beta2
Comment 3 Chris Peñalver 2012-05-05 07:30:35 UTC
*** Bug 44115 has been marked as a duplicate of this bug. ***
Comment 4 Chris Peñalver 2012-05-05 08:06:27 UTC
Joshua O'Leary, this is not reproducible. Please re-open if reproducible in 3.5.2+.

lsb_release -rd
Description:	Ubuntu 12.04 LTS
Release:	12.04

apt-cache policy libreoffice-impress
libreoffice-impress:
  Installed: 1:3.5.2-2ubuntu1
  Candidate: 1:3.5.2-2ubuntu1
  Version table:
 *** 1:3.5.2-2ubuntu1 0
        500 http://us.archive.ubuntu.com/ubuntu/ precise/main i386 Packages
        100 /var/lib/dpkg/status
Comment 5 Chris Peñalver 2012-05-05 10:52:04 UTC
1) lsb_release -rd
Description: Ubuntu 12.04 LTS
Release: 12.04

2) apt-cache policy libreoffice-impress
libreoffice-impress:
  Installed: 1:3.5.2-2ubuntu1
  Candidate: 1:3.5.2-2ubuntu1
  Version table:
 *** 1:3.5.2-2ubuntu1 0
        500 http://us.archive.ubuntu.com/ubuntu/ precise/main i386 Packages
        100 /var/lib/dpkg/status

3) What is expected to happen in a new Impress document via the Terminal:

loimpress --nologo

New Impress file -> click the rectangle containing "Click to add text" -> Under Tasks Custom Animation -> button Add... -> Entrance tab highlight Random Effects -> OK button -> right of Property ... button -> Effect tab -> change Sound dropdown apert -> OK button -> Slide Show and it plays the apert sound.

4) What happens instead is no sound is played during the slide show.
Comment 6 Joshua O'Leary 2012-05-06 13:24:37 UTC
Still a problem in 3.5.3:

ibreoffice-impress:
  Installed: 1:3.5.3-0ubuntu1
  Candidate: 1:3.5.3-0ubuntu1
  Version table:
 *** 1:3.5.3-0ubuntu1 0
        500 http://ppa.launchpad.net/libreoffice/ppa/ubuntu/ precise/main i386 Packages
        100 /var/lib/dpkg/status
     1:3.5.2-2ubuntu1 0
        500 http://ubuntu.retrosnub.co.uk/ubuntu/ precise/main i386 Packages
Comment 7 Chris Peñalver 2012-05-06 13:33:35 UTC Comment hidden (obsolete)
Comment 8 ign_christian 2013-08-03 02:35:14 UTC
*** Bug 48238 has been marked as a duplicate of this bug. ***
Comment 9 Petr Valach 2014-01-05 19:28:40 UTC
Still problem in LO 4.2. Very confusing. Please, it's more important than changing UI or something like this. It's core function.
Comment 10 Lukas Jelinek 2014-01-05 19:36:14 UTC
I can confirm it. This problem still persists. It somewhat disqualifies the Linux version compared to the Windows one.
Comment 11 vulcain 2014-01-30 11:22:47 UTC
May be duplicate of bug 67544 ??
Comment 12 Joshua O'Leary 2014-02-23 17:07:14 UTC Comment hidden (off-topic)
Comment 13 brenbarn 2014-05-28 19:50:42 UTC Comment hidden (no-value)
Comment 14 brenbarn 2014-05-28 19:55:40 UTC Comment hidden (no-value)
Comment 15 Björn Michaelsen 2014-06-04 14:32:27 UTC Comment hidden (obsolete)
Comment 16 vulcain 2014-07-13 07:16:27 UTC
On Ubuntu 12.04.4 x86_64 i reproduce with:
* LibreOffice 3.5.7.2 Version ID : 350m1(Build:2)
* LibreOffice 4.2.6.1 Build ID: 5fdddf655fba363e34f755715238d0943a44857e
* LibreOffice 4.3.0.2 Build ID: 14ed55896fdfcb93ff437b85c4f3e1923d2b1409 on Ubuntu 12.04


I think this bug is a major or critical bug. A lot of user want to add a son and hear it durng the slideshow
Comment 17 brenbarn 2014-08-06 23:50:22 UTC Comment hidden (no-value)
Comment 18 Luke 2014-10-01 06:08:49 UTC Comment hidden (obsolete)
Comment 19 Joshua O'Leary 2014-10-06 10:31:32 UTC
Still broken in Libreoffice 1:4.2.6.3-0ubuntu1 (Ubuntu 14.04), using both demo files
Comment 20 Joshua O'Leary 2014-10-06 10:36:06 UTC Comment hidden (obsolete)
Comment 21 Luke 2014-10-06 20:58:37 UTC Comment hidden (obsolete)
Comment 22 Joshua O'Leary 2014-10-07 15:44:37 UTC
Still broken in 4.3 (from https://launchpad.net/~libreoffice/+archive/ubuntu/libreoffice-4-3), in Ubuntu 14.04.

Luke, which version of Linux have you tested this in? This bug seems to be Linux-specific
Comment 23 Joshua O'Leary 2014-10-07 15:47:34 UTC
Created attachment 107504 [details]
Screenshot of version still with bug

1:4.3.2~rc2-0ubuntu1~trusty2
Comment 24 Björn Michaelsen 2014-10-16 23:10:46 UTC
As per https://bugs.freedesktop.org/show_bug.cgi?id=75683#c61 please check if this is a 32-Bit Linux only bug. => NEEDINFO
Comment 25 Joshua O'Leary 2014-10-19 14:38:40 UTC
Björn: it can't be 32-bit only, the recent testing I have done (mentioned earlier) has all been on 64 bit
Comment 26 Joel Madero 2014-11-02 15:34:05 UTC Comment hidden (obsolete)
Comment 27 Buovjaga 2014-11-15 13:40:05 UTC
If I follow the steps from comment 5, sound doesn't play in slideshow either on Linux or Windows.

Opening the file from comment 0, Linux doesn't play the sound, a little click might be heard. Changing the sound doesn't help.
Windows plays it, if I change it to be some other sound.

Win 7 64-bit Version: 4.4.0.0.alpha2+
Build ID: b021b5983c62e266b82d9f0c5c6d8d8900553827
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-12_01:10:08

Ubuntu 14.10 64-bit Version: 4.4.0.0.alpha2+
Build ID: 5bff4b016c4b44f4123e0e6a4fd4c0c4dc0cfa2d
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2014-11-13_00:14:29
Comment 28 Björn Michaelsen 2014-11-28 09:45:25 UTC Comment hidden (obsolete)
Comment 29 tommy27 2014-12-04 02:27:25 UTC Comment hidden (obsolete)
Comment 30 tommy27 2015-06-24 15:20:05 UTC Comment hidden (obsolete)
Comment 31 Julien Nabet 2015-09-12 15:07:45 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce the problem indicated in initial description but I noticed these logs:
warn:avmedia:24225:1:avmedia/source/viewer/mediawindow_impl.cxx:248: failed to create media player service com.sun.star.comp.avmedia.Manager_VLC
warn:avmedia:24225:1:avmedia/source/gstreamer/gstplayer.cxx:446: gstreamer error: 'Resource not found.' debug: 'gstfilesrc.c(515): gst_file_src_start (): /GstPlayBin:playbin3/GstURIDecodeBin:uridecodebin3/GstFileSrc:source:
No such file "/home/julien/usr/lib/libreoffice/basis3.3/share/gallery/sounds/apert.wav"'
warn:avmedia:24225:1:avmedia/source/gstreamer/gstplayer.cxx:446: gstreamer error: 'Resource not found.' debug: 'gstfilesrc.c(515): gst_file_src_start (): /GstPlayBin:playbin3/GstURIDecodeBin:uridecodebin3/GstFileSrc:source:
No such file "/home/julien/usr/lib/libreoffice/basis3.3/share/gallery/sounds/apert.wav"'
warn:avmedia:24225:1:avmedia/source/gstreamer/gstplayer.cxx:446: gstreamer error: 'No URI set' debug: 'gstplaybin2.c(5426): setup_next_source (): /GstPlayBin:playbin3'
warn:avmedia:24225:1:avmedia/source/gstreamer/gstplayer.cxx:446: gstreamer error: 'No URI set' debug: 'gstplaybin2.c(5426): setup_next_source (): /GstPlayBin:playbi

Unzipping odp file, I see this in content.xml:
<anim:audio xlink:href="../../../../usr/lib/libreoffice/basis3.3/share/gallery/sounds/apert.wav" />
Taking a look at where could be apert.wav, I found it there:
/usr/lib/libreoffice/share/gallery/sounds

So first attachment can't work. An enhancement could be to indicate the file is not found and propose to modify the sound.
Comment 32 Luke 2015-10-13 08:35:11 UTC
Julien's on the right track. If you create slide with an Animation Sound Effect and save it, it will work. If you copy that file to a different directory, the sound will no longer play. The reason why there was so much confusion over this bug, is that sound effect work until the file that they were created in is moved to a new location. 

So the issue here is the sound player is using the full system path of the sound effect, instead of using the relative location of the sound effect within the ODP file.
Comment 33 Buovjaga 2016-11-21 19:16:58 UTC
(In reply to Luke from comment #32)
> Julien's on the right track. If you create slide with an Animation Sound
> Effect and save it, it will work. If you copy that file to a different
> directory, the sound will no longer play. The reason why there was so much
> confusion over this bug, is that sound effect work until the file that they
> were created in is moved to a new location. 

This is not true. If you create a custom animation with a sound effect from the LibO gallery *on Linux*, it will not work at any point. You don't have to save, you don't have to move the file - it just won't work. I can reproduce this from scratch on Arch Linux with 5.2.3 / 5.3 and Ubuntu with 5.2.3. Same for version 3.6.7.2 on Arch.
On Windows it works perfectly.
Comment 34 Buovjaga 2016-11-21 19:17:50 UTC
*** Bug 92489 has been marked as a duplicate of this bug. ***
Comment 35 ammine007 2016-11-28 01:49:54 UTC
(In reply to Buovjaga from comment #33)
> (In reply to Luke from comment #32)
> > Julien's on the right track. If you create slide with an Animation Sound
> > Effect and save it, it will work. If you copy that file to a different
> > directory, the sound will no longer play. The reason why there was so much
> > confusion over this bug, is that sound effect work until the file that they
> > were created in is moved to a new location. 
> 
> This is not true. If you create a custom animation with a sound effect from
> the LibO gallery *on Linux*, it will not work at any point. You don't have
> to save, you don't have to move the file - it just won't work. I can
> reproduce this from scratch on Arch Linux with 5.2.3 / 5.3 and Ubuntu with
> 5.2.3. Same for version 3.6.7.2 on Arch.
> On Windows it works perfectly.

Salamu Alaikum,

I've tested the two versions of LibreOffice Impress. The first one (LO-5.2.3.1) on Debian 9 Stretch 64bits and the second one (5.2.3.3) on Win XP 32bits.
Here is the link to both versions : https://www.dropbox.com/s/rigc2ctg71iel38/LibreOfficeVersions.png?dl=0

I Confirm, There is no sound, even without moving the created ODP Animation file.
I've tried to open the content.xml inside the ODP animation; and replace all sounds links with the Complete path from Root of my partition /home/myuser/Documents/MySoundFile.flac

But still no sound! This is a serious bug that has now some years without being solved.

Thank you in advance
I really hope it will be resolved very soon!
Comment 36 Buovjaga 2016-12-16 20:50:44 UTC
*** Bug 104678 has been marked as a duplicate of this bug. ***
Comment 37 Al-Ayoubi 2016-12-19 17:55:25 UTC
(In reply to Buovjaga from comment #36)
> *** Bug 104678 has been marked as a duplicate of this bug. ***

Here is the Dev build of Libreoffice that i've downloaded and tested to see if the problem has been resolved and i can start using sounds with custom animations on a GNU/Linux OS : libreoffice-5-3~2016-12-14_22.50.48_LibreOfficeDev_5.3.0.0.beta2_Linux_x86-64_deb

But the problem still persists, and here are versions' info of the build I use:

Version: 5.3.0.0.beta2+
Build ID: 6eb2598a5d052220c6b569d1b49e80800850ac06
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; Layout Engine: new; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-5-3, Time: 2016-12-14_22:50:48
Locale: en-US (en_US.UTF-8); Calc: group

Hope this can clarify things, whish you all the best
Comment 38 ammine007 2016-12-19 18:00:36 UTC
(In reply to Al-Ayoubi from comment #37)
> (In reply to Buovjaga from comment #36)
> > *** Bug 104678 has been marked as a duplicate of this bug. ***
> 
> Here is the Dev build of Libreoffice that i've downloaded and tested to see
> if the problem has been resolved and i can start using sounds with custom
> animations on a GNU/Linux OS :
> libreoffice-5-3~2016-12-14_22.50.48_LibreOfficeDev_5.3.0.0.beta2_Linux_x86-
> 64_deb
> 
> But the problem still persists, and here are versions' info of the build I
> use:
> 
> Version: 5.3.0.0.beta2+
> Build ID: 6eb2598a5d052220c6b569d1b49e80800850ac06
> CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; Layout
> Engine: new; 
> TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-5-3, Time:
> 2016-12-14_22:50:48
> Locale: en-US (en_US.UTF-8); Calc: group
> 
> Hope this can clarify things, whish you all the best

I confirm this problem, sounds just won't play with custom animations, even without closing and moving the odp presentation file.

I really hope that you guys can make a 5.3 version of LO on which this historical bug disappear.
Comment 39 QA Administrators 2018-10-12 03:05:22 UTC Comment hidden (obsolete)
Comment 40 Luke 2018-10-13 16:51:54 UTC
Verified in Version: 6.0.6.2
Build ID: 1:6.0.6-0ubuntu0.18.04.1
and
Version: 6.2.0.0.alpha0+
Build ID: b9234b43ed259a10cf9077032af0f79740f01d8b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 

The bugdoc attachment 51048 [details] does not play a sound in the slideshow nor when I edit the custom animation->Options->Preview Sound

If I create a new slideshow, insert shape, and add a custom animation with a sound. The sound does play in the Options->Preview Sound. If I preview the animation or start the slideshow, the sound does not play.

Created Bug 120569 to handle Comment 31, sound resource not found which affect both Linux and Windows machines, preventing even the Sound Preview from working.
Comment 41 Xisco Faulí 2019-01-11 20:38:13 UTC
Lowering importance: Highest + Inherit from OOo doesn't make much sense at this point anymore...
Comment 42 Mark Hung 2019-02-12 14:13:35 UTC
Created attachment 149225 [details]
GStreamer log message ( turn on with export GST_DEBUG=7 ).

I tried to look into this issue. Despite the .wav selected for the effect doesn't work while the slideshow is running, you can hear the sound when you click the play button in the custom effect dialog.

export GST_DEBUG=7 and logging the messages of those two situations, the slideshow has following error messages:

riff riff-read.c:516:gst_riff_parse_strf_auds:<wavparse1>  channels    1^M
riff riff-read.c:517:gst_riff_parse_strf_auds:<wavparse1>  rate        11025^M
riff riff-read.c:518:gst_riff_parse_strf_auds:<wavparse1>  av_bps      22050^M
riff riff-read.c:519:gst_riff_parse_strf_auds:<wavparse1>  blockalign  2^M
riff riff-read.c:520:gst_riff_parse_strf_auds:<wavparse1>  bits/sample 16^M
basesrc gstbasesrc.c:2445:gst_base_src_update_length:<source> processing at or past EOS^M
wavparse gstwavparse.c:1789:gst_wavparse_stream_headers:<wavparse1> error: Couldn't read in header -2 (flushing)^M
GST_ERROR_SYSTEM gstelement.c:2145:gst_element_message_full_with_details:<wavparse1> posting message: 無法將資料串流解多工分接。^M
GST_ERROR_SYSTEM gstelement.c:2172:gst_element_message_full_with_details:<wavparse1> posted error message: 無法將資料串流解多工分接。^M
wavparse gstwavparse.c:2293:gst_wavparse_loop:<wavparse1> error: Internal data stream error.^M
wavparse gstwavparse.c:2293:gst_wavparse_loop:<wavparse1> error: streaming stopped, reason error (-5)^M
GST_ERROR_SYSTEM gstelement.c:2145:gst_element_message_full_with_details:<wavparse1> posting message: Internal data stream error


( note that gst_element_message_full_with_details said it can't demultiplex the stream, in Chinese. The message doesn't matter. )

I'm still trying to figure out what's going on there.
Comment 43 Commit Notification 2019-02-15 13:39:13 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/18975274ddc585cc3e3e8b6ae5c2800b27723444%5E%21

tdf#40780 extend default media duration from 0.01s to 0.3s.

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 44 Buovjaga 2019-02-24 18:50:27 UTC
Mark: thanks a lot for working on this oldie.

I now hear a sound, but it is a very short one. Does it stop after the 0.3 seconds? The duration of the animation has no effect on this.

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: ffc59a0c4fcc7f5486447c7132cf1133ba58e115
CPU threads: 8; OS: Linux 4.20; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 21 February 2019
Comment 45 Mark Hung 2019-02-25 00:49:54 UTC
I didn't check how the original test file play. The file path is share/gallery/sounds/apert.wav in LibreOffice installation directory. It's about one second, may be cut off because of the effect duration.
Comment 46 Buovjaga 2019-02-25 07:49:44 UTC
(In reply to Mark Hung from comment #45)
> I didn't check how the original test file play. The file path is
> share/gallery/sounds/apert.wav in LibreOffice installation directory. It's
> about one second, may be cut off because of the effect duration.

I tested from scratch with different sounds, all behave the same.
Comment 47 Mark Hung 2019-02-27 14:01:35 UTC
(In reply to Buovjaga from comment #46)
> (In reply to Mark Hung from comment #45)
> > I didn't check how the original test file play. The file path is
> > share/gallery/sounds/apert.wav in LibreOffice installation directory. It's
> > about one second, may be cut off because of the effect duration.
> 
> I tested from scratch with different sounds, all behave the same.

Well ... I also found that. It seems that my solution didn't fixed the issue completely. Let us track with another new issue.
Comment 48 BogdanB 2019-03-04 08:22:11 UTC
I hear NO sound.
Version: 6.3.0.0.alpha0+
Build ID: d4e3b48ee4c32bdb4e6cc37fb618cf818e152c31
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-03-02_23:38:22
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded
Comment 49 Buovjaga 2019-03-04 08:36:34 UTC
(In reply to BogdanB from comment #48)
> I hear NO sound.
> Version: 6.3.0.0.alpha0+
> Build ID: d4e3b48ee4c32bdb4e6cc37fb618cf818e152c31
> CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
> TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time:
> 2019-03-02_23:38:22
> Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
> Calc: threaded

In the original demo file from 2011? Then change the sound or do it from scratch. Then it works for me.
Comment 50 BogdanB 2019-03-04 09:08:12 UTC
Created attachment 149700 [details]
no sound

Am I doing something wrong? See the video.
When I press play button I con hear the Drama sound. But after F5 and slide show started no sound can be hear.

Version: 6.3.0.0.alpha0+
Build ID: d4e3b48ee4c32bdb4e6cc37fb618cf818e152c31
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-03-02_23:38:22
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded
Comment 51 Buovjaga 2019-03-04 12:06:29 UTC
(In reply to BogdanB from comment #50)
> Created attachment 149700 [details]
> no sound
> 
> Am I doing something wrong? See the video.
> When I press play button I con hear the Drama sound. But after F5 and slide
> show started no sound can be hear.

I see you chose "Random effects". Maybe it can be considered a separate bug (I repro), but please try with "Appear" or any other effect besides the random.
Comment 52 Buovjaga 2019-03-04 12:09:00 UTC
(In reply to Buovjaga from comment #51)
> (In reply to BogdanB from comment #50)
> > Created attachment 149700 [details]
> > no sound
> > 
> > Am I doing something wrong? See the video.
> > When I press play button I con hear the Drama sound. But after F5 and slide
> > show started no sound can be hear.
> 
> I see you chose "Random effects". Maybe it can be considered a separate bug
> (I repro), but please try with "Appear" or any other effect besides the
> random.

I also repro this on Windows with 6.2.0, so it is not related to this bug or bug fix.
Comment 53 Buovjaga 2019-03-04 12:19:12 UTC
Random effects bug now reported as bug 123836.
Comment 54 BogdanB 2019-03-04 13:05:03 UTC
(In reply to Buovjaga from comment #51)
> (In reply to BogdanB from comment #50)
> > Created attachment 149700 [details]
> > no sound
> > 
> > Am I doing something wrong? See the video.
> > When I press play button I con hear the Drama sound. But after F5 and slide
> > show started no sound can be hear.
> 
> I see you chose "Random effects". Maybe it can be considered a separate bug
> (I repro), but please try with "Appear" or any other effect besides the
> random.

Yeah, it works on 6.3 with every other effects
Version: 6.3.0.0.alpha0+
Build ID: d4e3b48ee4c32bdb4e6cc37fb618cf818e152c31
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-03-02_23:38:22
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded